--- a/video_shorts.ipynb
+++ b/video_shorts.ipynb
@@ -10,19 +10,332 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "fd3efc8e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'moviepy.editor'",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Leyendo archivo de subtítulos local: to_edit/subs.vtt...\n",
+      "Subtítulos leídos y formateados exitosamente.\n",
+      "Conectando con Gemini para analizar relleno verbal (duración > 0.1s)...\n",
+      "Análisis de IA completado. Parseando y filtrando segmentos...\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:02:36', 'fin': '00:02:36'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:03:13', 'fin': '00:03:13'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:03:23', 'fin': '00:03:23'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:04:04', 'fin': '00:04:04'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:04:25', 'fin': '00:04:25'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:05:04', 'fin': '00:05:04'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:05:07', 'fin': '00:05:07'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:07:19', 'fin': '00:07:19'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:07:22', 'fin': '00:07:22'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:07:43', 'fin': '00:07:43'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:07:54', 'fin': '00:07:54'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:08:03', 'fin': '00:08:03'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:08:59', 'fin': '00:08:59'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:09:34', 'fin': '00:09:34'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:10:25', 'fin': '00:10:25'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:10:33', 'fin': '00:10:33'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:10:50', 'fin': '00:10:50'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:11:02', 'fin': '00:11:02'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:11:07', 'fin': '00:11:07'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:11:19', 'fin': '00:11:19'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:12:01', 'fin': '00:12:01'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:12:07', 'fin': '00:12:07'}\n",
+      "  · Descartando corte de IA (duración inválida o muy corta): {'motivo': 'muletilla', 'inicio': '00:12:17', 'fin': '00:12:17'}\n",
+      "Se identificaron 26 cortes de IA válidos (duración >= 0.1s).\n",
+      "Identificando silencios de más de 1.5 segundos...\n",
+      "\n",
+      "--- Segmentos totales a eliminar (antes de fusión) ---\n",
+      "[\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:00:13\",\n",
+      "    \"fin\": \"00:00:15\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:00:36\",\n",
+      "    \"fin\": \"00:00:37\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:01:19\",\n",
+      "    \"fin\": \"00:01:20\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:02:04\",\n",
+      "    \"fin\": \"00:02:05\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:02:22\",\n",
+      "    \"fin\": \"00:02:23\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:02:31\",\n",
+      "    \"fin\": \"00:02:33\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:02:46\",\n",
+      "    \"fin\": \"00:02:48\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:03:23\",\n",
+      "    \"fin\": \"00:03:26\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:04:06\",\n",
+      "    \"fin\": \"00:04:08\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:04:25\",\n",
+      "    \"fin\": \"00:04:26\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:04:26\",\n",
+      "    \"fin\": \"00:04:28\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:05:07\",\n",
+      "    \"fin\": \"00:05:10\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:07:17\",\n",
+      "    \"fin\": \"00:07:19\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:07:43\",\n",
+      "    \"fin\": \"00:07:47\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:07:54\",\n",
+      "    \"fin\": \"00:07:57\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:08:03\",\n",
+      "    \"fin\": \"00:08:06\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:09:00\",\n",
+      "    \"fin\": \"00:09:02\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:09:10\",\n",
+      "    \"fin\": \"00:09:12\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:09:14\",\n",
+      "    \"fin\": \"00:09:15\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:09:34\",\n",
+      "    \"fin\": \"00:09:37\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:09:56\",\n",
+      "    \"fin\": \"00:09:57\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:10:35\",\n",
+      "    \"fin\": \"00:10:37\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:11:07\",\n",
+      "    \"fin\": \"00:11:10\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:11:19\",\n",
+      "    \"fin\": \"00:11:23\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:12:01\",\n",
+      "    \"fin\": \"00:12:03\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:12:07\",\n",
+      "    \"fin\": \"00:12:09\"\n",
+      "  }\n",
+      "]\n",
+      "--------------------------------------------------\n",
+      "\n",
+      "Usando video local: to_edit/video.mp4\n",
+      "Copiando video a la ruta de trabajo temporal: video_original_para_editar.mp4...\n",
+      "Copia completada.\n",
+      "Video listo para procesar.\n",
+      "\n",
+      "--- Segmentos a ELIMINAR (final, después de fusión) ---\n",
+      "[\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:00:13\",\n",
+      "    \"fin\": \"00:00:15\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:00:36\",\n",
+      "    \"fin\": \"00:00:37\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:01:19\",\n",
+      "    \"fin\": \"00:01:20\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:02:04\",\n",
+      "    \"fin\": \"00:02:05\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:02:22\",\n",
+      "    \"fin\": \"00:02:23\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:02:31\",\n",
+      "    \"fin\": \"00:02:33\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:02:46\",\n",
+      "    \"fin\": \"00:02:48\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:03:23\",\n",
+      "    \"fin\": \"00:03:26\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:04:06\",\n",
+      "    \"fin\": \"00:04:08\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:04:25\",\n",
+      "    \"fin\": \"00:04:28\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:05:07\",\n",
+      "    \"fin\": \"00:05:10\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:07:17\",\n",
+      "    \"fin\": \"00:07:19\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:07:43\",\n",
+      "    \"fin\": \"00:07:47\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:07:54\",\n",
+      "    \"fin\": \"00:07:57\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:08:03\",\n",
+      "    \"fin\": \"00:08:06\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:09:00\",\n",
+      "    \"fin\": \"00:09:02\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:09:10\",\n",
+      "    \"fin\": \"00:09:12\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:09:14\",\n",
+      "    \"fin\": \"00:09:15\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:09:34\",\n",
+      "    \"fin\": \"00:09:37\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:09:56\",\n",
+      "    \"fin\": \"00:09:57\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:10:35\",\n",
+      "    \"fin\": \"00:10:37\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:11:07\",\n",
+      "    \"fin\": \"00:11:10\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:11:19\",\n",
+      "    \"fin\": \"00:11:23\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:12:01\",\n",
+      "    \"fin\": \"00:12:03\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"motivo\": \"muletilla\",\n",
+      "    \"inicio\": \"00:12:07\",\n",
+      "    \"fin\": \"00:12:09\"\n",
+      "  }\n",
+      "]\n",
+      "--------------------------------------------------\n",
+      "\n",
+      "Manteniendo clip: 00:00:00 a 00:00:13\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ha ocurrido un error al ensamblar el video: 'VideoFileClip' object has no attribute 'subclip'\n",
+      "El proceso principal falló: Falló la etapa de corte de video.\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "1",
      "output_type": "error",
      "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjson\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msys\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmoviepy\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01meditor\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m VideoFileClip, concatenate_videoclips, TextClip, CompositeVideoClip\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mio\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StringIO\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrequests\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'moviepy.editor'"
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[31mSystemExit\u001b[39m\u001b[31m:\u001b[39m 1\n"
      ]
     }
    ],
@@ -33,7 +346,8 @@
     "import google.generativeai as genai\n",
     "import json\n",
     "import sys\n",
-    "from moviepy.editor import VideoFileClip, concatenate_videoclips, TextClip, CompositeVideoClip\n",
+    "# from moviepy.editor import VideoFileClip, concatenate_videoclips, TextClip, CompositeVideoClip\n",
+    "import moviepy as mpy\n",
     "from io import StringIO\n",
     "import requests\n",
     "import shutil # <-- ¡NUEVO IMPORT! Necesario para copiar tu video\n",
@@ -306,7 +620,7 @@
     "\n",
     "\n",
     "        print(\"Video listo para procesar.\")\n",
-    "        video = VideoFileClip(video_original_path)\n",
+    "        video = mpy.VideoFileClip(video_original_path)\n",
     "        video_duration = video.duration\n",
     "        if not secciones_para_eliminar:\n",
     "            print(\"No se especificaron cortes. El video no será modificado.\")\n",
@@ -357,7 +671,7 @@
     "            video.close()\n",
     "            return None\n",
     "        print(f\"\\nEnsamblando video final a partir de {len(clips_buenos)} clips...\")\n",
-    "        final_video = concatenate_videoclips(clips_buenos)\n",
+    "        final_video = mpy.concatenate_videoclips(clips_buenos)\n",
     "        final_video.write_videofile(video_final_path, codec=\"libx264\", audio_codec=\"aac\", logger=None)\n",
     "\n",
     "        # 6. Limpieza (Lógica sin cambios)\n",
@@ -386,7 +700,7 @@
     "            raise Exception(\"No se pudo descargar la fuente de emojis. Abortando.\")\n",
     "\n",
     "        # 2. Cargar el video base (cortado)\n",
-    "        video_base = VideoFileClip(video_base_path)\n",
+    "        video_base = mpy.VideoFileClip(video_base_path)\n",
     "\n",
     "        # 3. Preparar el \"mapeador de timestamps\"\n",
     "        # Esto convierte el tiempo original al nuevo tiempo (después de los cortes)\n",
@@ -456,7 +770,7 @@
     "\n",
     "        # 5. Componer el video final\n",
     "        print(f\"Componiendo video base con {len(clips_de_emojis)} emojis...\")\n",
-    "        video_final_con_emojis = CompositeVideoClip([video_base] + clips_de_emojis)\n",
+    "        video_final_con_emojis = mpy.CompositeVideoClip([video_base] + clips_de_emojis)\n",
     "\n",
     "        video_final_con_emojis.write_videofile(\n",
     "            video_final_path,\n",
