--- a/video_shorts.ipynb
+++ b/video_shorts.ipynb
@@ -864,10 +864,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "51efb2a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error: El archivo de video no se encuentra en 'to_edit/video.mp4'\n",
+      "Por favor, edita la variable RUTA_VIDEO_LOCAL en el script.\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[31mSystemExit\u001b[39m\u001b[31m:\u001b[39m 1\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import subprocess\n",
@@ -876,10 +894,14 @@
     "import json\n",
     "import sys\n",
     "from moviepy.editor import VideoFileClip\n",
+    "from io import StringIO\n",
+    "import shutil # <-- ¡NUEVO IMPORT!\n",
     "\n",
     "def to_seconds(time_str):\n",
     "    \"\"\"Convierte un string de tiempo 'HH:MM:SS' o 'MM:SS' a segundos.\"\"\"\n",
     "    try:\n",
+    "        # Añadido para limpiar timestamps como '00:03:05.123'\n",
+    "        time_str = time_str.split('.')[0]\n",
     "        parts = list(map(int, time_str.split(':')))\n",
     "        if len(parts) == 3:  # HH:MM:SS\n",
     "            h, m, s = parts\n",
@@ -893,39 +915,24 @@
     "        print(f\"Error al convertir tiempo '{time_str}': {e}\", file=sys.stderr)\n",
     "        return 0\n",
     "\n",
-    "def extraer_subtitulos(video_url):\n",
+    "# --- ¡FUNCIÓN MODIFICADA! ---\n",
+    "def leer_subtitulos_locales(vtt_path):\n",
     "    \"\"\"\n",
-    "    Descarga solo los subtítulos usando yt-dlp y los devuelve\n",
+    "    Lee un archivo .vtt local y lo devuelve\n",
     "    como un texto formateado Y como un objeto webvtt.\n",
     "    \"\"\"\n",
-    "    vtt_path = None\n",
-    "    captions = None  # <--- NUEVO\n",
-    "    transcript = \"\"  # <--- NUEVO\n",
+    "    captions = None\n",
+    "    transcript = \"\"\n",
     "\n",
     "    try:\n",
-    "        print(f\"Descargando subtítulos para: {video_url}...\")\n",
-    "        comando_subs = [\n",
-    "            'yt-dlp',\n",
-    "            '--write-auto-subs',\n",
-    "            '--sub-langs', 'es',\n",
-    "            '--convert-subs', 'vtt',\n",
-    "            '--skip-download',\n",
-    "            '-o', 'subs_temp.%(ext)s',\n",
-    "            video_url\n",
-    "        ]\n",
+    "        print(f\"Leyendo archivo de subtítulos local: {vtt_path}...\")\n",
+    "        if not os.path.exists(vtt_path):\n",
+    "             raise FileNotFoundError(f\"No se pudo encontrar el archivo .vtt local: {vtt_path}\")\n",
     "\n",
-    "        subprocess.run(comando_subs, check=True, stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL)\n",
-    "\n",
-    "        found_files = [f for f in os.listdir('.') if f.startswith('subs_temp.') and f.endswith('.vtt')]\n",
-    "        if found_files:\n",
-    "            vtt_path = found_files[0]\n",
-    "        else:\n",
-    "             raise FileNotFoundError(\"No se pudo encontrar el archivo .vtt descargado.\")\n",
-    "\n",
-    "        print(\"Subtítulos descargados. Leyendo y formateando...\")\n",
-    "\n",
-    "        captions = webvtt.read(vtt_path)  # <--- MODIFICADO (asignando a la variable externa)\n",
+    "        # La lógica de parseo del script original es buena, la reutilizamos\n",
+    "        captions = webvtt.read(vtt_path)\n",
     "        for caption in captions:\n",
+    "            # Usamos la conversión de segundos para consistencia\n",
     "            secs = int(caption.start_in_seconds)\n",
     "            h = secs // 3600\n",
     "            m = (secs % 3600) // 60\n",
@@ -933,25 +940,23 @@
     "            timestamp = f\"{h:02}:{m:02}:{s:02}\"\n",
     "            transcript += f\"[{timestamp}] {caption.text.strip().replace(chr(10), ' ')}\\n\"\n",
     "\n",
-    "        return transcript, captions  # <--- MODIFICADO (devuelve ambos)\n",
+    "        print(\"Subtítulos leídos y formateados exitosamente.\")\n",
+    "        return transcript, captions\n",
     "\n",
     "    except Exception as e:\n",
-    "        print(f\"Error extrayendo subtítulos: {e}\", file=sys.stderr)\n",
-    "        return None, None  # <--- MODIFICADO (devuelve None para ambos)\n",
-    "    finally:\n",
-    "        if vtt_path and os.path.exists(vtt_path):\n",
-    "            os.remove(vtt_path)\n",
+    "        print(f\"Error extrayendo subtítulos locales: {e}\", file=sys.stderr)\n",
+    "        return None, None\n",
     "\n",
     "def obtener_clips_con_gemini(api_key, transcript):\n",
     "    \"\"\"\n",
     "    Envía la transcripción a Gemini y le pide que identifique\n",
     "    secciones para shorts, devolviendo un JSON.\n",
+    "    (Función sin cambios)\n",
     "    \"\"\"\n",
     "    print(\"Conectando con Gemini para analizar momentos clave...\")\n",
     "    try:\n",
     "        genai.configure(api_key=api_key)\n",
     "\n",
-    "        # Usamos 1.5-flash, es rápido y muy capaz\n",
     "        model = genai.GenerativeModel('gemini-2.0-flash')\n",
     "\n",
     "        prompt = f\"\"\"\n",
@@ -971,12 +976,12 @@
     "        4. **REGLA CRÍTICA DE COMPLETITUD:** El timestamp de 'fin' DEBE\n",
     "           corresponder al final de una oración o una idea completa.\n",
     "           No cortes al orador a mitad de frase. Es PREFERIBLE que el\n",
-    "           clip dure unos segundos más (hasta 59 segundos) para\n",
+    "           clip dure unos segundos mÃ¡s (hasta 59 segundos) para\n",
     "           asegurar que la idea se concluya, en lugar de cortarlo\n",
     "           abruptamente.\n",
     "\n",
     "        Tu respuesta DEBE ser únicamente un objeto JSON, sin ningún\n",
-    "        otro texto, markdown o explicación.\n",
+    "        otro texto, markdown o explicaciÃ³n.\n",
     "\n",
     "        El formato JSON debe ser una lista de objetos, donde cada\n",
     "        objeto tiene tres claves:\n",
@@ -1014,24 +1019,25 @@
     "            print(\"2. Debes habilitar la API 'Generative Language API' en tu proyecto de Google Cloud.\", file=sys.stderr)\n",
     "        return None\n",
     "\n",
-    "def cortar_video_clips(video_url, secciones, captions_obj): # <--- MODIFICADO (nuevo argumento)\n",
+    "# --- ¡FUNCIÓN MODIFICADA! ---\n",
+    "def cortar_video_clips(video_local_path, secciones, captions_obj):\n",
     "    \"\"\"\n",
-    "    Descarga el video completo, corta las secciones de la IA\n",
+    "    Usa el video local, corta las secciones de la IA\n",
     "    y guarda un .txt con el subtítulo de cada una.\n",
     "    \"\"\"\n",
-    "    video_original_path = \"video_original.mp4\"\n",
+    "    video_original_path = \"video_original.mp4\" # Nombre temporal\n",
     "\n",
     "    try:\n",
-    "        print(f\"Descargando video completo con yt-dlp: {video_url}\")\n",
-    "        comando_descarga = [\n",
-    "            'yt-dlp',\n",
-    "            '-f', 'bestvideo[ext=mp4]+bestaudio[ext=m4a]/best[ext=mp4]/best',\n",
-    "            '-o', video_original_path,\n",
-    "            '--force-overwrite',\n",
-    "            video_url\n",
-    "        ]\n",
-    "        subprocess.run(comando_descarga, check=True, stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL)\n",
-    "        print(\"Video descargado exitosamente.\")\n",
+    "        # --- ¡BLOQUE DE DESCARGA ELIMINADO! ---\n",
+    "        # Reemplazado por una copia local\n",
+    "        print(f\"Usando video local: {video_local_path}\")\n",
+    "        if not os.path.exists(video_local_path):\n",
+    "            raise FileNotFoundError(f\"No se pudo encontrar el video en: {video_local_path}\")\n",
+    "        \n",
+    "        print(f\"Copiando video a la ruta de trabajo temporal: {video_original_path}...\")\n",
+    "        shutil.copy(video_local_path, video_original_path)\n",
+    "        print(\"Copia completada.\")\n",
+    "        # --- FIN DE LA MODIFICACIÓN ---\n",
     "\n",
     "        output_folder = \"shorts_generados_por_ia\"\n",
     "        if not os.path.exists(output_folder):\n",
@@ -1047,6 +1053,7 @@
     "            clip_recortado = None\n",
     "\n",
     "            try:\n",
+    "                # Esta parte funciona igual, ya que usa el archivo temporal\n",
     "                video = VideoFileClip(video_original_path)\n",
     "\n",
     "                inicio_seg = to_seconds(inicio_str)\n",
@@ -1079,19 +1086,15 @@
     "\n",
     "                print(f\"Clip '{nombre}' creado exitosamente.\")\n",
     "\n",
-    "                # --- ¡SECCIÓN NUEVA PARA GUARDAR EL TXT! ---\n",
+    "                # --- Lógica para guardar .txt (sin cambios) ---\n",
     "                texto_del_short = []\n",
     "                if captions_obj:\n",
     "                    for caption in captions_obj:\n",
-    "                        # Comprobar si el subtítulo se solapa con el clip\n",
     "                        if caption.start_in_seconds < fin_seg and caption.end_in_seconds > inicio_seg:\n",
     "                            clean_text = caption.text.strip().replace('\\n', ' ')\n",
     "                            texto_del_short.append(clean_text)\n",
     "\n",
-    "                # Unir las líneas en un solo bloque de texto\n",
     "                texto_completo = \"\\n\".join(texto_del_short)\n",
-    "\n",
-    "                # Definir la ruta del archivo .txt\n",
     "                txt_output_path = os.path.join(output_folder, f\"{nombre}.txt\")\n",
     "\n",
     "                try:\n",
@@ -1100,18 +1103,17 @@
     "                    print(f\"Texto del clip '{nombre}' guardado en .txt.\")\n",
     "                except Exception as e:\n",
     "                    print(f\"Advertencia: No se pudo guardar el .txt para '{nombre}': {e}\")\n",
-    "                # --- FIN DE LA SECCIÓN NUEVA ---\n",
+    "                # --- FIN DE LA SECCIÓN ---\n",
     "\n",
     "            finally:\n",
     "                if clip_recortado: clip_recortado.close()\n",
     "                if clip_original: clip_original.close()\n",
     "                if video: video.close()\n",
-    "\n",
+    "        \n",
+    "        # Limpiamos el video temporal copiado\n",
     "        os.remove(video_original_path)\n",
     "        print(f\"\\n¡Proceso completado! Los shorts y .txt están en la carpeta '{output_folder}'.\")\n",
     "\n",
-    "    except subprocess.CalledProcessError as e:\n",
-    "        print(f\"Error al descargar con yt-dlp: {e}\", file=sys.stderr)\n",
     "    except Exception as e:\n",
     "        print(f\"Ha ocurrido un error al cortar los clips: {e}\", file=sys.stderr)\n",
     "        if os.path.exists(video_original_path):\n",
@@ -1121,25 +1123,38 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "\n",
-    "    # --- CORRECCIÓN DE SEGURIDAD OBLIGATORIA ---\n",
-    "    # He revertido tu cambio. NUNCA escribas tu clave aquí.\n",
-    "    # El script fallará si no la configuras como variable de entorno.\n",
+    "    # --- ¡EDITA ESTAS LÍNEAS! ---\n",
+    "    # Debes proporcionar la ruta a TUS archivos locales\n",
+    "    RUTA_VIDEO_LOCAL = \"to_edit/video.mp4\"\n",
+    "    RUTA_SUBTITULOS_LOCAL = \"to_edit/subs.vtt\"\n",
+    "    # -----------------------------------\n",
+    "\n",
     "    API_KEY = os.getenv(\"API_KEY\")\n",
     "\n",
+    "    # --- ¡CORREGIDO! ---\n",
+    "    # Comprobando la variable \"API_KEY\" (en lugar de \"GEMINI_API_KEY\")\n",
     "    if not API_KEY:\n",
-    "        print(\"Error: No se encontró la variable de entorno 'GEMINI_API_KEY'.\", file=sys.stderr)\n",
-    "        print(\"Por favor, configúrala antes de ejecutar el script:\", file=sys.stderr)\n",
-    "        print(\"  En Linux/macOS: export GEMINI_API_KEY=\\\"TU_NUEVA_CLAVE_SECRETA\\\"\", file=sys.stderr)\n",
-    "        print(\"  En Windows CMD: set GEMINI_API_KEY=\\\"TU_NUEVA_CLAVE_SECRETA\\\"\", file=sys.stderr)\n",
+    "        print(\"Error: No se encontró la variable de entorno 'API_KEY'.\", file=sys.stderr)\n",
+    "        print(\"Por favor, configúrala antes de ejecutar el script.\", file=sys.stderr)\n",
+    "        print(\" (Recuerda crear un archivo .env o exportarla en tu terminal)\", file=sys.stderr)\n",
     "        sys.exit(1)\n",
     "\n",
-    "    URL_VIDEO = \"https://www.youtube.com/watch?v=YMsUEDTwdSQ\"\n",
+    "    # --- ¡NUEVO! Comprobación de archivos locales ---\n",
+    "    if \"to_edit/video.mp4\" in RUTA_VIDEO_LOCAL or not os.path.exists(RUTA_VIDEO_LOCAL):\n",
+    "        print(f\"Error: El archivo de video no se encuentra en '{RUTA_VIDEO_LOCAL}'\", file=sys.stderr)\n",
+    "        print(\"Por favor, edita la variable RUTA_VIDEO_LOCAL en el script.\", file=sys.stderr)\n",
+    "        sys.exit(1)\n",
+    "    if \"to_edit/subs.vtt\" in RUTA_SUBTITULOS_LOCAL or not os.path.exists(RUTA_SUBTITULOS_LOCAL):\n",
+    "        print(f\"Error: El archivo de subtítulos no se encuentra en '{RUTA_SUBTITULOS_LOCAL}'\", file=sys.stderr)\n",
+    "        print(\"Por favor, edita la variable RUTA_SUBTITULOS_LOCAL en el script.\", file=sys.stderr)\n",
+    "        sys.exit(1)\n",
+    "    # ---------------------------------\n",
     "\n",
     "    try:\n",
-    "        # <--- MODIFICADO (ahora recibe dos variables)\n",
-    "        transcripcion, subtitulos_obj = extraer_subtitulos(URL_VIDEO)\n",
+    "        # --- ¡MODIFICADO! ---\n",
+    "        transcripcion, subtitulos_obj = leer_subtitulos_locales(RUTA_SUBTITULOS_LOCAL)\n",
     "\n",
-    "        if not transcripcion or not subtitulos_obj: # <--- MODIFICADO\n",
+    "        if not transcripcion or not subtitulos_obj:\n",
     "            raise Exception(\"No se pudo obtener la transcripción o los subtítulos.\")\n",
     "\n",
     "        secciones_ai = obtener_clips_con_gemini(API_KEY, transcripcion)\n",
@@ -1150,8 +1165,8 @@
     "        print(json.dumps(secciones_ai, indent=2, ensure_ascii=False))\n",
     "        print(\"------------------------------------------\\n\")\n",
     "\n",
-    "        # <--- MODIFICADO (pasa el objeto de subtítulos a la función)\n",
-    "        cortar_video_clips(URL_VIDEO, secciones_ai, subtitulos_obj)\n",
+    "        # --- ¡MODIFICADO! ---\n",
+    "        cortar_video_clips(RUTA_VIDEO_LOCAL, secciones_ai, subtitulos_obj)\n",
     "\n",
     "    except Exception as e:\n",
     "        print(f\"El proceso falló: {e}\", file=sys.stderr)\n",
