--- a/video_shorts.ipynb
+++ b/video_shorts.ipynb
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "51efb2a9",
    "metadata": {},
    "outputs": [
@@ -747,24 +747,24 @@
       "--- Secciones identificadas por Gemini ---\n",
       "[\n",
       "  {\n",
-      "    \"nombre\": \"Enclex_No_Se_Presenta_Directamente\",\n",
-      "    \"inicio\": \"00:00:44\",\n",
-      "    \"fin\": \"00:01:01\"\n",
+      "    \"nombre\": \"Primer_Requisito_Bachelor\",\n",
+      "    \"inicio\": \"00:00:35\",\n",
+      "    \"fin\": \"00:01:20\"\n",
       "  },\n",
       "  {\n",
-      "    \"nombre\": \"Prioriza_La_Board_Correcta\",\n",
-      "    \"inicio\": \"00:03:02\",\n",
-      "    \"fin\": \"00:03:39\"\n",
+      "    \"nombre\": \"Examen_NCLEX_No_Es_Imposible\",\n",
+      "    \"inicio\": \"00:05:05\",\n",
+      "    \"fin\": \"00:05:42\"\n",
       "  },\n",
       "  {\n",
-      "    \"nombre\": \"Costo_y_Donde_Presentar_El_Enclex\",\n",
-      "    \"inicio\": \"00:05:15\",\n",
-      "    \"fin\": \"00:05:54\"\n",
+      "    \"nombre\": \"Visa_H1B_vs_EV3\",\n",
+      "    \"inicio\": \"00:12:08\",\n",
+      "    \"fin\": \"00:12:47\"\n",
       "  },\n",
       "  {\n",
-      "    \"nombre\": \"Prepara_Tu_Cerebro_Para_El_Examen\",\n",
-      "    \"inicio\": \"00:10:08\",\n",
-      "    \"fin\": \"00:10:22\"\n",
+      "    \"nombre\": \"Beneficios_Posgrados_Enfermeros_EEUU\",\n",
+      "    \"inicio\": \"00:14:06\",\n",
+      "    \"fin\": \"00:14:23\"\n",
       "  }\n",
       "]\n",
       "------------------------------------------\n",
@@ -772,18 +772,18 @@
       "Usando video local: to_edit/video.mp4\n",
       "Copiando video a la ruta de trabajo temporal: video_original.mp4...\n",
       "Copia completada.\n",
-      "Creando clip IA: Enclex_No_Se_Presenta_Directamente (00:00:44 a 00:01:01)...\n",
-      "Clip 'Enclex_No_Se_Presenta_Directamente' creado exitosamente.\n",
-      "Texto del clip 'Enclex_No_Se_Presenta_Directamente' guardado en .txt.\n",
-      "Creando clip IA: Prioriza_La_Board_Correcta (00:03:02 a 00:03:39)...\n",
-      "Clip 'Prioriza_La_Board_Correcta' creado exitosamente.\n",
-      "Texto del clip 'Prioriza_La_Board_Correcta' guardado en .txt.\n",
-      "Creando clip IA: Costo_y_Donde_Presentar_El_Enclex (00:05:15 a 00:05:54)...\n",
-      "Clip 'Costo_y_Donde_Presentar_El_Enclex' creado exitosamente.\n",
-      "Texto del clip 'Costo_y_Donde_Presentar_El_Enclex' guardado en .txt.\n",
-      "Creando clip IA: Prepara_Tu_Cerebro_Para_El_Examen (00:10:08 a 00:10:22)...\n",
-      "Clip 'Prepara_Tu_Cerebro_Para_El_Examen' creado exitosamente.\n",
-      "Texto del clip 'Prepara_Tu_Cerebro_Para_El_Examen' guardado en .txt.\n",
+      "Creando clip IA: Primer_Requisito_Bachelor (00:00:35 a 00:01:20)...\n",
+      "Clip 'Primer_Requisito_Bachelor' creado exitosamente.\n",
+      "Texto del clip 'Primer_Requisito_Bachelor' guardado en .txt.\n",
+      "Creando clip IA: Examen_NCLEX_No_Es_Imposible (00:05:05 a 00:05:42)...\n",
+      "Clip 'Examen_NCLEX_No_Es_Imposible' creado exitosamente.\n",
+      "Texto del clip 'Examen_NCLEX_No_Es_Imposible' guardado en .txt.\n",
+      "Creando clip IA: Visa_H1B_vs_EV3 (00:12:08 a 00:12:47)...\n",
+      "Clip 'Visa_H1B_vs_EV3' creado exitosamente.\n",
+      "Texto del clip 'Visa_H1B_vs_EV3' guardado en .txt.\n",
+      "Creando clip IA: Beneficios_Posgrados_Enfermeros_EEUU (00:14:06 a 00:14:23)...\n",
+      "Clip 'Beneficios_Posgrados_Enfermeros_EEUU' creado exitosamente.\n",
+      "Texto del clip 'Beneficios_Posgrados_Enfermeros_EEUU' guardado en .txt.\n",
       "\n",
       "¡Proceso completado! Los shorts y .txt están en la carpeta 'shorts_generados_por_ia'.\n"
      ]
